Overhauling product pages
Product pages and support pages actually work now

--- a/consumer/consumerIndex.html
+++ b/consumer/consumerIndex.html
@@ -87,6 +87,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Support Options:</h6>
+                        <a class="collapse-item" href="viewticket.html">View Support Tickets</a>
                         <a class="collapse-item" href="newticket.html">New Support Ticket</a>
                         <a class="collapse-item" href="knowledge.html">Knowledgebase</a>
                         <a class="collapse-item" href="community.html">Community Forum</a>
