Use case build outs
Finished a majority of the listed use cases

--- a/consumer/viewticket.html
+++ b/consumer/viewticket.html
@@ -91,7 +91,7 @@
                         <a class="collapse-item" href="newticket.html">New Support Ticket</a>
                         <a class="collapse-item" href="knowledge.html">Knowledgebase</a>
                         <a class="collapse-item" href="community.html">Community Forum</a>
-                        <a class="collapse-item" href="community.html">Order Tracking</a>
+                        <a class="collapse-item" href="tracking.html">Order Tracking</a>
                        
                     </div>
                 </div>
